tests/rosetta/out/Java/biorhythms.error
javac error: exit status 1
/tmp/TestMochiToJavabiorhythms1800388575/001/Biorhythms.java:20: error: incompatible types: double cannot be converted to String
        int i = Integer.parseInt(x);
                                 ^
/tmp/TestMochiToJavabiorhythms1800388575/001/Biorhythms.java:46: error: cannot find symbol
        M0123456789 digits = new M0123456789(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
        ^
  symbol:   class M0123456789
  location: class Biorhythms
/tmp/TestMochiToJavabiorhythms1800388575/001/Biorhythms.java:46: error: cannot find symbol
        M0123456789 digits = new M0123456789(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
                                 ^
  symbol:   class M0123456789
  location: class Biorhythms
/tmp/TestMochiToJavabiorhythms1800388575/001/Biorhythms.java:73: error: incompatible types: cannot infer type arguments for ArrayList<>
        List<Integer> lengths = new ArrayList<>(Arrays.asList(31, feb, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31));
                                             ^
    reason: inference variable E has incompatible bounds
      equality constraints: Integer
      lower bounds: T,Integer,Object
  where E,T are type-variables:
    E extends Object declared in class ArrayList
    T extends Object declared in method <T>asList(T...)
/tmp/TestMochiToJavabiorhythms1800388575/001/Biorhythms.java:123: error: incompatible types: int cannot be converted to String
        int part2 = Integer.parseInt(((7 * (Integer.parseInt((y + ((m + 9) / 12))))) / 4));
                                                                ^
/tmp/TestMochiToJavabiorhythms1800388575/001/Biorhythms.java:124: error: incompatible types: int cannot be converted to String
        int part3 = Integer.parseInt(((275 * m) / 9));
                                                ^
/tmp/TestMochiToJavabiorhythms1800388575/001/Biorhythms.java:129: error: incompatible types: Integer cannot be converted to List<Integer>
        List<Integer> by = bparts.get(0);
                                     ^
/tmp/TestMochiToJavabiorhythms1800388575/001/Biorhythms.java:130: error: incompatible types: Integer cannot be converted to List<Integer>
        List<Integer> bm = bparts.get(1);
                                     ^
/tmp/TestMochiToJavabiorhythms1800388575/001/Biorhythms.java:131: error: incompatible types: Integer cannot be converted to List<Integer>
        List<Integer> bd = bparts.get(2);
                                     ^
/tmp/TestMochiToJavabiorhythms1800388575/001/Biorhythms.java:133: error: incompatible types: Integer cannot be converted to List<Integer>
        List<Integer> ty = tparts.get(0);
                                     ^
/tmp/TestMochiToJavabiorhythms1800388575/001/Biorhythms.java:134: error: incompatible types: Integer cannot be converted to List<Integer>
        List<Integer> tm = tparts.get(1);
                                     ^
/tmp/TestMochiToJavabiorhythms1800388575/001/Biorhythms.java:135: error: incompatible types: Integer cannot be converted to List<Integer>
        List<Integer> td = tparts.get(2);
                                     ^
/tmp/TestMochiToJavabiorhythms1800388575/001/Biorhythms.java:136: error: incompatible types: List<Integer> cannot be converted to int
        int diff = absInt(day(ty, tm, td) - day(by, bm, bd));
                              ^
/tmp/TestMochiToJavabiorhythms1800388575/001/Biorhythms.java:136: error: incompatible types: List<Integer> cannot be converted to int
        int diff = absInt(day(ty, tm, td) - day(by, bm, bd));
                                                ^
/tmp/TestMochiToJavabiorhythms1800388575/001/Biorhythms.java:144: error: incompatible types: Integer cannot be converted to List<Integer>
            List<Integer> length = lengths.get(i);
                                              ^
/tmp/TestMochiToJavabiorhythms1800388575/001/Biorhythms.java:145: error: incompatible types: String cannot be converted to List<String>
            List<String> cycle = cycles.get(i);
                                           ^
/tmp/TestMochiToJavabiorhythms1800388575/001/Biorhythms.java:146: error: bad operand types for binary operator '%'
            int position = diff % length;
                                ^
  first type:  int
  second type: List<Integer>
/tmp/TestMochiToJavabiorhythms1800388575/001/Biorhythms.java:147: error: bad operand types for binary operator '/'
            double quadrant = (position * 4) / length;
                                             ^
  first type:  int
  second type: List<Integer>
/tmp/TestMochiToJavabiorhythms1800388575/001/Biorhythms.java:167: error: incompatible types: List<String> cannot be converted to List<List<String>>
            List<List<String>> p = pairs.get(idx);
                                            ^
/tmp/TestMochiToJavabiorhythms1800388575/001/Biorhythms.java:168: error: incompatible types: List<String> cannot be converted to String
            biorhythms(p.get(0), p.get(1));
                            ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
20 errors
